crates/eure-macros/tests/compile_fail/into_eure_allow_unknown_fields_on_unit_variant.rs
use eure::IntoEure;

#[derive(IntoEure)]
enum Test {
    #[eure(allow_unknown_fields)]
    Unit,
}

fn main() {}
